fix(background) wrong background name

--- a/src/general.scss
+++ b/src/general.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-	background: #222 url("/assets/images/shattered.png");
+	background: #222 url("/assets/images/soft-triangles.png");
 }
 
 .App-intro {
